Feladatok befejezve az első beadandóhoz.
